# spparks

cmake/: CMakeLists.txt
cmake/Modules/: Documentation.cmake  OpenCLUtils.cmake  SPPARKSUtils.cmake  StyleHeaderUtils.cmake  Testing.cmake  Tools.cmake  generate_spkgitversion.cmake
examples/crystalline_orientations/: README.rst  in.potts_cubic  in.potts_cubic_2d  in.potts_hcp_cutoff25  log.potts_cubic  log.potts_hcp_cutoff25
lib/stitch/: CMakeLists.txt
src/: app_potts_crystalline_orientations.cpp  app_potts_crystalline_orientations.h
tools/crystalline_orientations/: plot_hcp_symmetry_histograms.py
